@@ -72,7 +72,7 @@
 		</area>
 	</colorbuttons>
 
-	<timers delay="100" fadetime="500" >
+	<timers delay="0" fadetime="{fadetimeTimersAndLastrecs}" >
 		<area condition="not{numtimerconflicts}" x="61%" y="73%" width="12%" height="6%" layer="3">
 			<drawtext condition="gt({numtimers}, 1)" x="5%" y="15%" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="{numtimers} {tr(activetimers)}" />
 			<drawtext condition="eq({numtimers}, 1)" x="5%" y="15%" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="{numtimers} {tr(activetimer)}" /> 
@@ -102,7 +102,7 @@
 		</area>
 	</timers>
 
-	<lastrecordings condition="gt({indexpanelMain}, 1)" delay="100" fadetime="500">
+	<lastrecordings condition="gt({indexpanelMain}, 1)" delay="0" fadetime="{fadetimeTimersAndLastrecs}">
 			<area condition="eq({numtimers}, 6)++eq({indexpanelMain}, 2)" x="68%" y="80%" width="11%" height="18%" layer="3">
 				<loop name="recordings" x="0" y="0" orientation="horizontal" columnwidth="{areawidth}" rowheight="{areaheight}" overflow="cut">
 					<drawtext x="0" y="10%" align="center" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[date]} {recordings[time]}" />
@@ -168,7 +168,7 @@
 			</area>
 	</lastrecordings>
 
-	<discusage delay="150" fadetime="500">
+	<discusage delay="0" fadetime="{fadetimeTempsLoadWeatherDisc}">
 		<area x="75%" y="73%" width="18%" height="6%" layer="3">
 			<drawtext x="0" y="0" align="right" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="{vdrusagestring}" />
 		</area>
@@ -177,13 +177,13 @@
 	<devices> 
 	</devices>
 	
-	<temperatures condition="gt({indexpanelMain},0)" delay="200" fadetime="500" >
+	<temperatures condition="gt({indexpanelMain},0)" delay="0" fadetime="{fadetimeTempsLoadWeatherDisc}" >
 		<area x="81%" y="80%" width="14%" height="6%" layer="3">
 			<drawtext x="0" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="CPU: {cputemp}°C  GPU: {gputemp}°C"/>
 		</area>
 	</temperatures>
 
-	<currentweather condition="gt({indexpanelMain},0)" delay="200" fadetime="500" >
+	<currentweather condition="gt({indexpanelMain},0)" delay="0" fadetime="{fadetimeTempsLoadWeatherDisc}" >
 		<area x="81%" y="92%" width="7%" height="6%" layer="3">
 			<drawimage name="weathericon" x="0" valign="center" width="{areaheight}*0.7" height="{areaheight}*0.7" imagetype="icon" path="{icon}" />
 			<drawtext name="temperature" x="0" align="right" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="{temperature}°C" />
@@ -194,7 +194,7 @@
 		</area>
 	</currentweather>
 
-	<systemload condition="gt({indexpanelMain},0)" delay="200" fadetime="500" >
+	<systemload condition="gt({indexpanelMain},0)" delay="0" fadetime="{fadetimeTempsLoadWeatheDisc}" >
 		<area x="79%" y="80%" width="21%" height="20%" layer="3">
 		</area>
 		<area x="81%" y="86%" width="14%" height="6%" layer="3">
